--- a/src/fxml/revue.fxml
+++ b/src/fxml/revue.fxml
@@ -42,7 +42,7 @@
       </GridPane>
       <FlowPane alignment="CENTER" prefHeight="33.0" prefWidth="456.0">
          <children>
-            <Button fx:id="b_creer" disable="true" mnemonicParsing="false" onAction="#creation" text="Créer" />
+            <Button   mnemonicParsing="false" onAction="#creation" text="Créer" />
          </children>
          <VBox.margin>
             <Insets />
