--- a/src/fxml/abonnementframe.fxml
+++ b/src/fxml/abonnementframe.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Launch_displayabo">
    <children>
-      <FlowPane prefHeight="200.0" prefWidth="200.0" />
+      <VBox fx:id="vbox_ajout" prefHeight="200.0" prefWidth="100.0" />
       <FlowPane prefHeight="182.0" prefWidth="600.0">
          <children>
             <TableView prefHeight="200.0" prefWidth="600.0">
