--- a/src/fxml/client_option.fxml
+++ b/src/fxml/client_option.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Client_option">
    <children>
       <GridPane prefHeight="550.0" prefWidth="600.0">
         <columnConstraints>
@@ -26,13 +26,13 @@
          <children>
             <TextField fx:id="tf_prenom" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <TextField fx:id="tf_nom" prefHeight="26.0" prefWidth="217.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" onAction="#recherche_nom_prenom" text="rechercher par prenom" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Button mnemonicParsing="false" onAction="#recherche_nom" text="rechercher par nom" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Button fx:id="b_trie_nom_prenom" mnemonicParsing="false" disable="true" onAction="#recherche_nom_prenom" text="rechercher par prenom" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <Button fx:id="b_trie_nom" mnemonicParsing="false" disable="true" onAction="#recherche_nom" text="rechercher par nom" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
             <Button mnemonicParsing="false" onAction="#trie_alphabetique" text="trie alphabetique" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <Button mnemonicParsing="false" onAction="#trie_ville" text="trie par ville" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <Label text="Nom : " GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
             <Label text="Prenom : " GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Button mnemonicParsing="false" onAction="#voir_abonnement" text="voir ses abonnement" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <Button fx:id="b_recherche_abonnement" mnemonicParsing="false" disable="true" onAction="#voir_abonnement" text="voir ses abonnement" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
