fini version à tester

--- a/src/fxml/abonnementframe.fxml
+++ b/src/fxml/abonnementframe.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Abonnementframe">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Abonnementframe">
    <children>
-      <VBox fx:id="vbox_ajout" prefHeight="200.0" prefWidth="100.0" />
+      <VBox fx:id="vbox_ajout" prefHeight="500.0" prefWidth="600.0" />
       <FlowPane prefHeight="182.0" prefWidth="600.0">
          <children>
             <TableView fx:id="tableau" prefHeight="200.0" prefWidth="600.0">
@@ -35,10 +35,10 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" prefWidth="100.0" onAction="#open_ajout" text="ajouter" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#open_ajout" prefWidth="100.0" text="ajouter" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <Button fx:id="b_modifier" disable="true" mnemonicParsing="false" onAction="#open_modif" prefHeight="26.0" prefWidth="100.0" text="modifier" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <Button fx:id="b_supprimer" disable="true" mnemonicParsing="false" onAction="#supprimer" prefHeight="26.0" prefWidth="100.0" text="supprimer" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <Button mnemonicParsing="false" prefWidth="100.0" text="plus d'option" onAction="#open_option" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <Button mnemonicParsing="false" onAction="#open_option" prefWidth="100.0" text="plus d'option" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
       </GridPane>
    </children>
