--- a/src/fxml/revueframe.fxml
+++ b/src/fxml/revueframe.fxml
@@ -9,17 +9,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Revueframe">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Revueframe">
    <children>
-      <VBox fx:id="vbox_ajout" prefHeight="200.0" prefWidth="100.0" />
+      <VBox fx:id="vbox_ajout" prefHeight="500.0" prefWidth="600.0" />
       <FlowPane prefHeight="182.0" prefWidth="600.0">
          <children>
             <TableView fx:id="tableau" prefHeight="160.0" prefWidth="599.0">
               <columns>
                   <TableColumn fx:id="colqte" prefWidth="77.0" text="Quantité" />
-                  <TableColumn fx:id="coltitre" prefWidth="114.0" text="titre" />
-                  <TableColumn fx:id="colprix" prefWidth="79.0" text="prix" />
-                  <TableColumn fx:id="colperio" prefWidth="120.0" text="périodicité" />
+                  <TableColumn fx:id="coltitre" prefWidth="171.20001220703125" text="titre" />
+                  <TableColumn fx:id="colprix" prefWidth="130.40000915527344" text="prix" />
+                  <TableColumn fx:id="colperio" prefWidth="220.0" text="périodicité" />
               </columns>
             </TableView>
          </children>
@@ -36,7 +36,7 @@
         </rowConstraints>
          <children>
             <Button alignment="CENTER" mnemonicParsing="false" onAction="#open_ajout" text="ajouter" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-            <Button fx:id="b_modifier" disable="true" mnemonicParsing="false"  onAction="#open_modif" prefHeight="26.0" prefWidth="106.0" text="modifier" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <Button fx:id="b_modifier" disable="true" mnemonicParsing="false" onAction="#open_modif" prefHeight="26.0" prefWidth="106.0" text="modifier" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <Button fx:id="b_supprimer" disable="true" mnemonicParsing="false" onAction="#supprimer" prefHeight="26.0" prefWidth="82.0" text="supprimer" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
             <Button mnemonicParsing="false" onAction="#open_option" text="plus d'option" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
