modification du nom de certain fichier pour meilleur compréhension

--- a/src/fxml/client.fxml
+++ b/src/fxml/client.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="500.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Launch_client">
+<VBox prefHeight="500.0" prefWidth="600.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Client_ajout">
    <children>
       <GridPane prefHeight="347.0" prefWidth="560.0">
         <columnConstraints>
