--- a/src/fxml/periodicite.fxml
+++ b/src/fxml/periodicite.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<VBox maxHeight="250.0" maxWidth="600.0" minHeight="250.0" minWidth="600.0" prefHeight="250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Launch_periodicite">
+<VBox maxHeight="250.0" maxWidth="600.0" minHeight="250.0" minWidth="600.0" prefHeight="250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="launch.Periodicite_ajout">
    <children>
       <GridPane prefHeight="203.0" prefWidth="600.0">
         <columnConstraints>
